tests/src/frontend/typechecking/invalid/infer_frozen_met_4.sk
class Tester() {
  fun foo<T: frozen>(T): Array<T> {
    Array[]
  }
}

fun test(): void {
  Tester().foo(mutable Array[])
}
